# python-eventing

./: .gitignore  .importlinter  .pre-commit-config.yaml  .vulture-whitelist.py  LICENSE  README.md  commit_msg.txt  coverage.json  docker-compose.yml  pyproject.toml  setup.cfg
.cursor/: feature_verification_log.md
.cursor/plans/: REFACTORING_PLAN.md  add_comprehensive_eventing_tests_12bad60a.plan.md  add_eventing_features_12bad60a.plan.md  code_verification_plan_17553059.plan.md  deep_dive_analysis_kafka_rabbitmq_faststream_parity.md  file_splitting_plan_enforce_100-line_limit_ebb8e9aa.plan.md  fix_all_linter_issues_fdd16870.plan.md  move_extracted_files_to_subfolders_4f61ba06.plan.md  multi-commit_strategy_1f37f431.plan.md  readme_improvements_plan_fca94192.plan.md  removal_simplification_plan.md
.cursor/plans/audit/: SUMMARY.md  dataview_article_analysis.md  eventbus_deep_analysis.md  existing_code_inventory.md  feature7_rate_limiting_analysis.md  library_coverage_full.md  migration_guide.md  redundancy_comparison.md  removal_plan.md
.cursor/plans/verification/: verification_consolidated_summary.md
.cursor/rules/: git-commits.mdc
.github/workflows/: linters.yml  tests.yml  validate-dependencies.yml
.serena/: project.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-02_17-50-46Z-gitignore-file-contents.md  2026-04-03_09-45-40Z-check-our-features-in.md  2026-04-03_13-13-55Z-mit-license-and-badges-addition.md  2026-04-03_19-38-26Z-code-best-practices-verification.md  2026-04-03_20-14-06Z-comparison-of-.gitignore-files.md  2026-04-03_23-33-52Z-(1)-code-best-practices-verification.md  2026-04-04_00-06-27Z-user-workspace-configuration.md  2026-04-04_13-10-11Z-specstory-history-saving-issue.md  2026-04-04_22-31-06Z-(1)-code-best-practices-verification.md  2026-04-05_10-51-09Z-(1)-code-best-practices-verification.md  2026-04-05_14-28-55Z-documentation-improvement-options.md  2026-04-05_14-30-52Z-eventing-system-feature-proposals.md  2026-04-06_12-24-25Z-(1)-eventing-system-feature-proposals.md  2026-04-06_12-56-34Z-(2)-eventing-system-feature-proposals.md  2026-04-06_13-13-43Z-(2)-eventing-system-feature-proposals.md  2026-04-06_13-14-52Z-(3)-eventing-system-feature-proposals.md  2026-04-06_13-28-35Z-(1)-eventing-system-feature-proposals.md  2026-04-15_10-22-42Z-(1)-sphinx-auto-documentation-generation.md  2026-04-15_16-48-38Z-test-discussion.md  2026-04-17_00-25-08Z-(2)-sphinx-auto-documentation-generation.md  2026-04-17_01-01-46Z-event-catalog-configuration-and-validation.md  2026-04-18_20-12-11Z-(1)-readme-improvement-suggestions.md  2026-04-18_20-18-52Z-(2)-readme-improvement-suggestions.md  2026-04-18_20-20-51Z-(3)-readme-improvement-suggestions.md  2026-04-18_23-07-52Z-(4)-readme-improvement-suggestions.md  2026-04-19_23-54-01Z-(5)-readme-improvement-suggestions.md
docs/: confluent-backend-migration.md  requirements.txt
docs/deployment/: quickstart-docker-kafka.md
docs/eventbus/: usage-guide.md
docs/source/: conf.py  consumer-transactions.md  cross-service-communication.md  dlq-handlers.md  event-catalog.md  index.md  integration-guide.md  kafka-rabbitmq-features.md  transactional-outbox.md  troubleshooting.md
docs/source/api/: index.md
docs/testing/: coverage-strategy.md
docs/tests/: integration-test-setup-patterns.md  test-isolation-architecture.md
memories/cursor-chats/: cursor_1_code_best_practices_verificat.md  cursor_code_best_practices_verification.md
memories/refactorings_and_bugs_history/: 2026-04-13-kafka-consumer-group-test-isolation-bug.md  2026-04-13-pytest-conftest-import-path-mismatch-bug.md  2026-04-13-python-mock-decorator-parameter-ordering-bug.md  2026-04-13-shared-kafka-topic-cross-contamination-bug.md
scripts/: check_coverage_thresholds.py  cleanup_docker.py
scripts/tests/e2e_v2/: consumer_service_v2.py  producer_service_v2.py  report_v2.json  run_e2e_test_v2.py
src/eventing/: __init__.py  config.py  main.py
src/eventing/application/: __init__.py
src/eventing/core/: __init__.py
src/eventing/domain/: __init__.py
src/eventing/infrastructure/: __init__.py
src/eventing/presentation/: __init__.py  router.py
src/fastapi_config_patterns/: __init__.pyi
src/fastapi_middleware_toolkit/: __init__.pyi
src/messaging/: __init__.py  config.py  main.py
src/messaging/application/: __init__.py
src/messaging/catalog/: __init__.py  manager.py
src/messaging/config/: __init__.py  base_settings.py  event_catalog_settings.py  kafka_settings.py
src/messaging/core/: __init__.py
src/messaging/domain/: __init__.py
src/messaging/infrastructure/: __init__.py  exceptions.py
src/messaging/main/: _initialization.py
src/messaging/presentation/: __init__.py  dlq_routes.py  replay_routes.py  router.py
src/python_domain_events/: __init__.pyi
src/python_outbox_core/: __init__.pyi  health_check.pyi
src/sqlalchemy_async_session_factory/: session.pyi
tests/: conftest.py
tests/chaos/: __init__.py  test_circuit_breaker_resilience.py
tests/chaos/test_circuit_breaker_resilience/: __init__.py  conftest.py  test_circuit_opening.py  test_circuit_states.py
tests/chaos/test_kafka_connection_resilience/: __init__.py  test_publisher_on_down.py  test_reconnection.py
tests/conftest/: __init__.py  cleanup_hooks.py  config.py  container_fixtures.py  database_fixtures.py  http_client_fixtures.py
tests/conftest/cleanup_hooks/: __init__.py  session_finish.py  session_start.py
tests/conftest_modules/: __init__.py
tests/integration/: processed_message_consumers.py  test_concurrent_processing.py  test_consumer_group_config.py  test_dlq_admin_api.py  test_event_replay_api.py  test_kafka_poison_message.py  test_kafka_rabbitmq_bridge.py  test_opentelemetry_wiring.py  test_outbox_dlq_flow.py  test_outbox_repository_roundtrip.py  test_outbox_worker_flow.py  test_processed_message_store.py  test_testcontainers_smoke.py
tests/property_based/: __init__.py
tests/unit/: test_health.py  test_initialization_unit.py  test_main_and_routing.py
tmp/: cursor_code_best_practices_verification.md
(+262 files in other folders)
